--- a/css/style.css
+++ b/css/style.css
@@ -111,15 +111,17 @@ h3 {font-size: var(--fs-h3);}
 .list__item {
     padding: 0.25em 0.75em;
     list-style: none;
-    transition: outline 200ms ease-in-out, transform 200ms ease-in-out;
-
+    transition: outline 100ms ease-in-out, transform 100ms ease-in-out;
 }
 
 .list__item:hover,
 .list__item:focus {
-    
     outline: 0.5px solid black;
     transform: scale(1.1);
+}
+
+.list__item:active{
+    font-size: 0.95rem;
 }
 
 .nav__url{
